human-intervention-logs/org.apache.tomcat.embed:tomcat-embed-core:11.0.18/gradle-test/gradle-test-2026-05-20T11-34-29-590018Z.log
> Task :tck-build-logic:extractPluginRequests FROM-CACHE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins FROM-CACHE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.apache.tomcat.embed:tomcat-embed-core:11.0.18
Command: `/home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5926-fc427e1d/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 2 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :processResources NO-SOURCE
> Task :tck-test-support:processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :tck-test-support:classes UP-TO-DATE
> Task :jar UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE

> Task :compileTestJava FAILED
/home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5926-fc427e1d/tests/src/org.apache.tomcat.embed/tomcat-embed-core/11.0.18/src/test/java/tomcat/HttpConstraintElementTest.java:10: error: cannot find symbol
import jakarta.servlet.ServletSecurity;
                      ^
  symbol:   class ServletSecurity
  location: package jakarta.servlet
/home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5926-fc427e1d/tests/src/org.apache.tomcat.embed/tomcat-embed-core/11.0.18/src/test/java/tomcat/HttpConstraintElementTest.java:19: error: package ServletSecurity does not exist
        HttpConstraintElement element = new HttpConstraintElement(ServletSecurity.EmptyRoleSemantic.PERMIT);
                                                                                 ^
/home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5926-fc427e1d/tests/src/org.apache.tomcat.embed/tomcat-embed-core/11.0.18/src/test/java/tomcat/HttpConstraintElementTest.java:21: error: package ServletSecurity does not exist
        assertThat(element.getEmptyRoleSemantic()).isEqualTo(ServletSecurity.EmptyRoleSemantic.PERMIT);
                                                                            ^
/home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5926-fc427e1d/tests/src/org.apache.tomcat.embed/tomcat-embed-core/11.0.18/src/test/java/tomcat/AuthConfigFactoryTest.java:38: error: CustomAuthConfigFactory is not abstract and does not override abstract method removeServerAuthModule(Object) in AuthConfigFactory
    public static class CustomAuthConfigFactory extends AuthConfigFactory {
                  ^
Note: /home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5926-fc427e1d/tests/src/org.apache.tomcat.embed/tomcat-embed-core/11.0.18/src/test/java/tomcat/ClasspathURLStreamHandlerTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
4 errors


[Incubating] Problems report is available at: file:///home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5926-fc427e1d/tests/src/org.apache.tomcat.embed/tomcat-embed-core/11.0.18/build/reports/problems/problems-report.html
FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  Note: /home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5926-fc427e1d/tests/src/org.apache.tomcat.embed/tomcat-embed-core/11.0.18/src/test/java/tomcat/ClasspathURLStreamHandlerTest.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  /home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5926-fc427e1d/tests/src/org.apache.tomcat.embed/tomcat-embed-core/11.0.18/src/test/java/tomcat/AuthConfigFactoryTest.java:38: error: CustomAuthConfigFactory is not abstract and does not override abstract method removeServerAuthModule(Object) in AuthConfigFactory
      public static class CustomAuthConfigFactory extends AuthConfigFactory {
                    ^
  /home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5926-fc427e1d/tests/src/org.apache.tomcat.embed/tomcat-embed-core/11.0.18/src/test/java/tomcat/HttpConstraintElementTest.java:10: error: cannot find symbol
  import jakarta.servlet.ServletSecurity;
                        ^
    symbol:   class ServletSecurity
    location: package jakarta.servlet
  /home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5926-fc427e1d/tests/src/org.apache.tomcat.embed/tomcat-embed-core/11.0.18/src/test/java/tomcat/HttpConstraintElementTest.java:19: error: package ServletSecurity does not exist
          HttpConstraintElement element = new HttpConstraintElement(ServletSecurity.EmptyRoleSemantic.PERMIT);
                                                                                   ^
  /home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5926-fc427e1d/tests/src/org.apache.tomcat.embed/tomcat-embed-core/11.0.18/src/test/java/tomcat/HttpConstraintElementTest.java:21: error: package ServletSecurity does not exist
          assertThat(element.getEmptyRoleSemantic()).isEqualTo(ServletSecurity.EmptyRoleSemantic.PERMIT);
                                                                              ^
  4 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
12 actionable tasks: 1 executed, 11 up-to-date

BUILD FAILED in 11s

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5926-fc427e1d/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.apache.tomcat.embed:tomcat-embed-core:11.0.18 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 13s
9 actionable tasks: 2 executed, 2 from cache, 5 up-to-date
